updating personal information under different p tags

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Solutions Architect and laugher</p>
       <h1>Where I'm From</h1>
-      <p>China</p>
+      <p>Harbin, China</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Singing, Dancing, Travelling, Reading, Laughing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Part time astronaut/pilot/p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Cambridge</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Its interesting and can also help me further my career.</p>
     </section>
 
     <footer id="footer">
