completing close p tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>Singing, Dancing, Travelling, Reading, Laughing</p>
       <h1>What's your dream job?</h1>
-      <p>Part time astronaut/pilot/p>
+      <p>Part time astronaut/pilot</p>
       <h1>Where do you live?</h1>
       <p>Cambridge</p>
       <h1>Why do you want to be a web developer?</h1>
